Changes in PrimeNumber,PowerOfElement,PartitionBy,OTPGeneration,PalindromeInteger,NonRepeatWord class